--- a/README.org
+++ b/README.org
@@ -2,6 +2,8 @@
 
 Das Skript ist eine Adaption des Skriptes, das bereits im Homematic-Forum diskutiert und publiziert wurde. Im ursprünglichen [[https://homematic-forum.de/forum/viewtopic.php?f=18&t=43201&sid=1f958be783e0acee13e7205c7bcbabe4&start=30][Beitrag]] wurde allerdings noch der ältere Lufttemperatur und -feuchtigkeitssensor verwendet. Ich habe das Skript an den Sensor BME280 angepasst, der zuverlässiger arbeitet und zusätzlich noch den Luftdruck messen kann.
 
+Für die genaue Vorgehensweise zur Integration in die Homematic CCU, habe ich einen [[https://www.andreas-voit.at/2021/02/05/feinstaub2homematic/][Blogbeitrag]] verfasst.
+
 ** Funktionsweise des Skriptes
 
 Das Skript fragt die Messwerte über eine JSON-Schnittstelle ab. Daraus exrahiert es die Messwerte und speichert sie in die entsprechenden Variablen.
